compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:3:1: error: right-hand side of actual type alias cannot be of type kotlin.Nothing
actual typealias E01 = Nothing
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:3:18: error: 'actual typealias E01 = Nothing' has no corresponding members for expected class members:

    fun equals(other: Any?): Boolean

    fun hashCode(): Int

    fun toString(): String

actual typealias E01 = Nothing
                 ^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:4:1: error: right-hand side of actual type alias should be a class, not another type alias.
actual typealias E02 = MyNothing
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:4:18: error: 'actual typealias E02 = MyNothing' has no corresponding members for expected class members:

    fun equals(other: Any?): Boolean

    fun hashCode(): Int

    fun toString(): String

actual typealias E02 = MyNothing
                 ^^^
